--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "uuid-token-generator": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
